Make communications between REST and Speak modules